tests/error/modifier_errors/flag_dagger_qubit1 copy.py
from guppylang import qubit
from guppylang.decorator import guppy


@guppy(dagger=True)
def test() -> None:
    x = qubit()


test.compile()
